<resources>
    <string name="app_name">I am volunteer</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_activity">activity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_description">just image description</string>
    <string name="text_title">Saling bantu</string>
    <string name="text_home">Home</string>
    <string name="text_join">Join</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_profile">Profile</string>
    <string name="text_select">select</string>
    <string name="text_welcome">Welcome to Muslim Volunteer</string>
    <string name="text_signin">sign in</string>
    <string name="text_signup">sign up</string>
    <string name="text_name">Enter your name</string>
    <string name="text_phone">Enter your phone</string>
    <string name="text_float_name">Name</string>
    <string name="text_float_mobile">Mobile number</string>
    <string name="description_signin">Please put your mobile number. If this first login, swipe left to register new account.</string>
    <string name="description_signup">Follow our simple step to register a account. Wait for confirmation number to complete registration.</string>
    <string name="text_verification">Enter receive verification number</string>
    <string name="text_float_verification">Verification number</string>
    <string name="text_confirm">confirm</string>
    <string name="description_verification">Please wait, you will receive a message that contain verification number.</string>
    <string name="text_hint_name">Name</string>
    <string name="text_hint_age">Age</string>
    <string name="text_hint_contact">Contact</string>
    <string name="text_update">update</string>
    <string name="text_completed_title">Save Mother Earth</string>
    <string name="text_detail">details</string>
    <string name="main_option_text_signout">Sign out</string>
    <string name="main_option_text_about">About</string>

    <string name="dialog_positive">Ya</string>
    <string name="dialog_negative">Tidak</string>
    <string name="dialog_message_do_task">Anda pasti untuk melakukan tugasan yang telah dipilih.</string>
    <string name="dialog_message_cancel_task">Anda pasti untuk membatalkan tugasan yang telah dipilih.</string>
    <string name="text_time">Masa: 08.00.00 am</string>
    <string name="text_date">Tarikh: 02/11/2018</string>
    <string name="text_location">Tempat: Masjid Istiqamah</string>
    <string name="text_mvm">Muslim Volunteer Malaysia</string>
    <string name="text_caption">Today help, for better tomorrow.</string>
    <string name="text_view_location">view location on map</string>
    <string name="text_finish">finish</string>
    <string name="text_ongoing">ongoing</string>
    <string name="text_call">Call Us</string>
    <string name="text_whatsapp">Whatsapp Us</string>
    <string name="text_notification">Notify</string>
</resources>
