<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".main.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/linear_space"
        android:src="@drawable/user"
        app:civ_border_color="@color/black"
        app:civ_border_width="2dp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/profile_field_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/linear_space"
        android:hint="@string/text_hint_name"
        android:inputType="textPersonName"
        app:met_floatingLabel="highlight" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/profile_field_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/linear_space"
        android:hint="@string/text_hint_age"
        android:inputType="number"
        app:met_floatingLabel="highlight" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/profile_field_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/linear_space"
        android:hint="@string/text_hint_contact"
        android:inputType="phone"
        app:met_floatingLabel="highlight" />

    <Button
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/linear_space"
        android:background="@drawable/button_login"
        android:text="@string/text_update"
        android:textColor="@drawable/button_login_text" />
</LinearLayout>